Write a failing test to test Github Action

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_subdirectory(test)
 
 add_library(Manager Manager.cpp)
+
+add_executable(VDSProject main.cpp)
+target_link_libraries(VDSProject Manager)
