--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -4,5 +4,4 @@ cmake_minimum_required(VERSION 3.10)
 
 add_executable(VDSProject_test main_test.cpp)
 target_link_libraries(VDSProject_test Manager)
-target_link_libraries(VDSProject_test gtest gtest_main pthread)
-
+target_link_libraries(VDSProject_test gtest pthread)
